--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ https://templatemo.com/tm-562-space-dynamic
       </div>
       <div class="row">
         <div class="col-lg-3 col-sm-6">
-          <a href="#"> 
+          <a href="#"> <!-- jbjh-->
             <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.3s">
               <div class="hidden-content">
                 <h4>SEO Analysis</h4>
